Add: function get_ticket_number and ticket generate endpoint

--- a/src/main/resources/db/changelog/postgres/20250629-004-create-table-tickets.yaml
+++ b/src/main/resources/db/changelog/postgres/20250629-004-create-table-tickets.yaml
@@ -7,11 +7,15 @@ databaseChangeLog:
             tableName: tickets
             columns:
               - column:
-                  name: phone_number
-                  type: VARCHAR(15)
+                  name: id
+                  type: BIGINT
+                  autoIncrement: true
                   constraints:
                     primaryKey: true
                     nullable: false
+              - column:
+                  name: phone_number
+                  type: VARCHAR(15)
               - column:
                   name: ticket_number
                   type: VARCHAR(64)
