Add: authorization and authentication services and configs

--- a/pom.xml
+++ b/pom.xml
@@ -137,6 +137,12 @@
             <artifactId>liquibase-core</artifactId>
         </dependency>
 
+        <!-- Freemarker -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-freemarker</artifactId>
+        </dependency>
+
         <!-- Lombok -->
         <dependency>
             <groupId>org.projectlombok</groupId>
