--- a/src/main/resources/db/changelog/postgres/20250629-001-create-user-table.yaml
+++ b/src/main/resources/db/changelog/postgres/20250629-001-create-user-table.yaml
@@ -77,8 +77,7 @@ databaseChangeLog:
               - column:
                   name: last_login_date_time
                   type: TIMESTAMP
-                  constraints:
-                    nullable: false
+                  defaultValueComputed: CURRENT_TIMESTAMP
               - column:
                   name: pass_count
                   type: INT
