--- a/pom.xml
+++ b/pom.xml
@@ -150,7 +150,17 @@
             <optional>true</optional>
         </dependency>
 
-
+        <!-- Shedlock -->
+        <dependency>
+            <groupId>net.javacrumbs.shedlock</groupId>
+            <artifactId>shedlock-spring</artifactId>
+            <version>4.29.0</version>
+        </dependency>
+        <dependency>
+            <groupId>net.javacrumbs.shedlock</groupId>
+            <artifactId>shedlock-provider-jdbc-template</artifactId>
+            <version>4.29.0</version>
+        </dependency>
 
         <dependency>
             <groupId>org.springframework.boot</groupId>
