--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,5 +1,11 @@
 version: '3.8'
 services:
+  redis:
+    image: 'redis:alpine'
+    container_name: redis
+    ports:
+      - '6379:6379'
+    restart: always
   database:
     image: postgres:15.1
     container_name: du-queue-database
